fixed personal leaderboard overflow

--- a/src/pages/Leaderboards/Leaderboards.css
+++ b/src/pages/Leaderboards/Leaderboards.css
@@ -1,5 +1,6 @@
 .Leaderboards-table-container.MuiTableContainer-root {
-  width: clamp(20rem, 100%, 40rem);
+  min-width: 20rem;
+  max-width: 40rem;
   display: inline-block;
 }
 
